--- a/search/index.html
+++ b/search/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        
+    </style>
 </head>
 <body>
-   >
+    <div class="search">
+        Search<input type="text">
+    </div>
+    
+    <div class="container">
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
